fix: use explicit max-height in px expanded note overflow

--- a/src/pages/Calendar/components/TaskLayer/TaskCell/Note/ExpandedNoteLayer/ExpandedNoteLayer.css
+++ b/src/pages/Calendar/components/TaskLayer/TaskCell/Note/ExpandedNoteLayer/ExpandedNoteLayer.css
@@ -7,6 +7,7 @@
     overflow: hidden;
     display: -webkit-box;
     -webkit-box-orient: vertical;
+    max-height: 82.1px;
     -webkit-line-clamp: 5;
     text-overflow: ellipsis;
     user-select: none;
